--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.amazonaws:aws-java-sdk-elastictranscoder'
     compile 'com.amazonaws:aws-java-sdk-sqs'
     compile group: 'com.amazonaws', name: 'amazon-sqs-java-messaging-lib', version: '1.0.4'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-rekognition', version: '1.11.354'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
