--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,4 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-mainClassName = 'AWSService'
+ainClassName = 'AWSService'
